# ir-canon-remote

./: .gitignore  README.md  ir-timelapser-remote.service  main.py  pyproject.toml
.github/workflows/: pylint.yml
controllers/: device_utils.py  digit_display_utils.py  gphoto_context.py  gphoto_context_base.py  gphoto_context_mock.py  ir_action_dispatcher.py  ir_codes_data.py
