[tool.poetry]
name = "ir-timelapser-remote"
version = "0.1.0"
description = ""
authors = ["dyadyaJora <ja_massa97@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.6"
pigpio = "^1.78"
PiIR = "^0.2.5"
gpiozero = "^1.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
